--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
+body{
+    background-color: rgb(22,23,23); 
+  font-family:'poppins'
+}
 * {
   margin: 0;
   padding: 0;
@@ -17,9 +21,8 @@ nav{
     color: white;
     display: flex;
     justify-content: space-between;
-    background-image:url("https://wallpapers.com/images/hd/borboletas-azuis-hollow-knight-htthva79qwf3msbg.jpg");
- background-position:center 80%;
     padding: 10px 20px;
+    margin-bottom: -58px;
 }
 .logo{
     font-size: 1.8rem;
@@ -33,7 +36,18 @@ li{
 a{ 
     text-decoration: none; 
     color: white;
+  
 }
-body{
-    font-family:'poppins'
+.hero {
+
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5))
+
+  , url('https://www.escapistmagazine.com/wp-content/uploads/2025/09/The-first-boss-of-Silksong-was-Steam-checkout-but-worth-it.jpg') no-repeat center center/cover;
+
+  text-align: center;
+
+  padding: 6rem 2rem;
+
+  color: #ebfced;
+
 }
