--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
   padding: 0;
   box-sizing: border-box;
 }
-menu{
+.menu{
     display: flex;
     justify-content: center ;
     flex-direction: row;
@@ -24,7 +24,7 @@ nav{
     padding: 10px 20px;
     margin-bottom: -58px;
 }
-logo{
+.logo{
     font-size: 1.8rem;
     color: #ffffff;
     font-weight: bold;
@@ -38,7 +38,7 @@ a{
     color: white;
   
 }
-hero {
+.hero {
 
   background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5))
 
