--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 body{
-    background-color: rgb(0,0,0); 
+    background-color: black; 
   font-family:'poppins'
 }
 * {
@@ -15,7 +15,7 @@ body{
     flex-direction: row;
     list-style: none;   
     color:black;
-    background-color: black;
+    background-color: none;
 }
 nav{
     color: white;
